base web structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-this is me
+<html>
+<head>
+    <link rel="stylesheet" href="css/styles.css" type = "text/css">
+    <script scr = "scripts/scripts.js" type="text/javascript">
+
+    </script>
+</head>
+
+<body>
+
+<div class="container"> Hi </div>
+
+</body>
+
+
+</html>
