--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/styles.css" type = "text/css">
-    <script scr = "scripts/scripts.js" type="text/javascript">
-
-    </script>
+    <script src = "scripts/scripts.js"></script>
 </head>
+<header>
+    header
+</header>
 
 <body>
 
-<div class="container"> Hi </div>
+<div class="container"> body
+
+    <h1>
+        Quote Generator
+    </h1>
+
+    <div class="mainText" id="mainText" > 
+        Quotes here bois
+    </div>
+
+    <input type="button" onclick="loadQuote()" value="Memes"/>
+
+
+
+</div>
+
+
 
 </body>
 
