Updating JS functionality

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         Quote Generator
     </h1>
 
-    <div class="mainText" id="mainText" > 
+    <div class="mainText" id="mainText" >
         Quotes here bois
     </div>
 
-    <input type="button" onclick="loadQuote()" value="Memes"/>
+    <input type="button" onclick="LoadQuote()" value="Memes"/>
 
 
 
