js script file correction

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/styles.css" type = "text/css">
-    <script src = "scripts/scripts.js"></script>
+    <script src = "scripts/quote.js"></script>
+    <script src = "scripts/input.js"></script>
 </head>
 <header>
     header
