--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <html>
-<head>
-    <link rel="stylesheet" href="css/styles.css" type = "text/css">
-    <script src = "scripts/quote.js"></script>
-    <script src = "scripts/input.js"></script>
-</head>
-<header>
-    header
-</header>
 
-<body>
+    <head>
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="stylesheet" href="css/popupForm.css" type="text/css">
+        <script src="scripts/quote.js"></script>
+        <script src="scripts/input.js"></script>
+    </head>
 
-<div class="container"> body
+    <header>
+        header
+    </header>
 
-    <h1>
-        Quote Generator
-    </h1>
+    <body>
+        <div class="container"> body
+            <h1>Quote Generator</h1>
 
-    <div class="mainText" id="mainText" >
-        Quotes here bois
-    </div>
+            <div class="mainText" id="mainText">
+                Quotes here bois
+            </div>
 
-    <input type="button" onclick="LoadQuote()" value="Memes"/>
+            <input type="button" id = "generate" onclick="LoadQuote()" value="Generate Quote" />
+            <input type="button" id = "create" onclick="ShowPopup()" value="Create Quote" />
 
-
-
-</div>
-
-
-
-</body>
-
+            <div class="popup" id="popup">
+                <div id="popupContact">
+                    <form action="#" id="form" method="post" name="form">
+                        <input id="closeButton" type="button" onclick="HidePopup()" value=" X " />
+                        <h2>Submit your own quote!</h2>
+                        <hr/>
+                        <input id="author" name="author" placeholder="Author" type="text" />
+                        <input id="date" name="date" placeholder="Date" type="text" />
+                        <textarea id="quote" name="quote" placeholder="Quote"></textarea>
+                        <a href="javascript:%20ValidateInput()" id="submit">Submit</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </body>
 
 </html>
